--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,6 @@ cypress_test:
   image: olehsrh/cypress:1
   stage: testCypress
   script:
-    - ls backend/target/
     - cd e2e-tests
     # print CI environment variables for reference
 #    - npx print-env CI
@@ -116,7 +115,7 @@ pushToNexus:
     - cat ~/.npmrc
     - echo "<settings><servers><server><id>nexus-snapshots</id><username>admin</username><password>$NEXUS_PASS</password></server><server><id>nexus-releases</id><username>admin</username><password>$NEXUS_PASS</password></server></servers><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
     - cat ~/.m2/settings.xml
-    - mvn deploy -Dnexus.url=http://ip-10-113-80-244.evoforge.org
+    - mvn --batch-mode deploy -DskipTests -Dnexus.url=http://ip-10-113-80-244.evoforge.org
   artifacts:
     paths:
       - backend/target/backend-*.jar
