--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@ cypress_test:
     # print CI environment variables for reference
 #    - npx print-env CI
     # start the server in the background
-    - npm run backend:start:tmp &
+    - npm run backend:start &
     - npm run backend:waitToStart
     - cd ../client-display
     - npm install
