--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -12,9 +12,9 @@ skills.store.settings.public_groupName2.settingId3=valuec
 skills.authorization.userInfoUri=
 
 # Uncomment to run against local instance of Postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/skills
-#spring.datasource.username=postgres
-#spring.datasource.password=skillspass
+spring.datasource.url=jdbc:postgresql://localhost:5432/skills
+spring.datasource.username=postgres
+spring.datasource.password=skillspass
 
 # Uncomment to show SQL
 #spring.jpa.show-sql=true
