--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -16,6 +16,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/skills
 spring.datasource.username=postgres
 spring.datasource.password=skillspass
 
+# Uncomment be able to connect to in memory H2 DB
+#spring.datasource.url=jdbc:h2:mem:skills
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
 # Uncomment to show SQL
 #spring.jpa.show-sql=true
 #logging.level.org.hibernate: INFO
