--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - build
   - installCypress
-  - testCypress
+#  - testCypress
   - pushToNexus
   - deploy
 
@@ -82,32 +82,32 @@ installCypress:
 
 
 # all jobs that actually run tests can use the same definition
-cypress_test:
-  image: olehsrh/cypress:1
-  stage: testCypress
-  script:
-    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
-    - cat ~/.npmrc
-    - cd e2e-tests
-    # print CI environment variables for reference
-#    - npx print-env CI
-    # start the server in the background
-    - npm run backend:start &
-    - cd ../client-display
-    - npm install
-    - npm run serve &
-    - cd ../e2e-tests
-    - npm install
-    - npm run backend:waitToStart
-    - npx wait-on -t 40000 http://localhost:8083
-    # run tests
-    - npm run cy:run
-  artifacts:
-    when: always
-    paths:
-      - e2e-tests/cypress/videos/**/*.mp4
-      - e2e-tests/cypress/screenshots/**/*.png
-    expire_in: 1 day
+#cypress_test:
+#  image: olehsrh/cypress:1
+#  stage: testCypress
+#  script:
+#    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+#    - cat ~/.npmrc
+#    - cd e2e-tests
+#    # print CI environment variables for reference
+##    - npx print-env CI
+#    # start the server in the background
+#    - npm run backend:start &
+#    - cd ../client-display
+#    - npm install
+#    - npm run serve &
+#    - cd ../e2e-tests
+#    - npm install
+#    - npm run backend:waitToStart
+#    - npx wait-on -t 40000 http://localhost:8083
+#    # run tests
+#    - npm run cy:run
+#  artifacts:
+#    when: always
+#    paths:
+#      - e2e-tests/cypress/videos/**/*.mp4
+#      - e2e-tests/cypress/screenshots/**/*.png
+#    expire_in: 1 day
 
 pushToNexus:
   except:
