--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - build
-#  - installCypress
-#  - testCypress
+  - installCypress
+  - testCypress
   - pushToNexus
   - deploy
 
@@ -16,7 +16,7 @@ build:
     - cat ~/.npmrc
     - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
     - cat ~/.m2/settings.xml
-    - mvn --batch-mode install -DskipTests
+    - mvn --batch-mode install
   artifacts:
     paths:
       - backend/pom.xml
@@ -64,50 +64,50 @@ cache:
     - cache/Cypress
     - e2e-tests/node_modules
 # this job installs NPM dependencies and Cypress
-#installCypress:
-#  image: cypress/base:10
-#  stage: installCypress
-#
-#  script:
-#    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
-#    - cat ~/.npmrc
-#    - cd e2e-tests
-#    - npm install
-#    # check Cypress binary path and cached versions
-#    # useful to make sure we are not carrying around old versions
-#    - npx cypress cache path
-#    - npx cypress cache list
-#    - npx print-env CI
-#    - npm run cy:verify
+installCypress:
+  image: cypress/base:10
+  stage: installCypress
+
+  script:
+    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+    - cat ~/.npmrc
+    - cd e2e-tests
+    - npm install
+    # check Cypress binary path and cached versions
+    # useful to make sure we are not carrying around old versions
+    - npx cypress cache path
+    - npx cypress cache list
+    - npx print-env CI
+    - npm run cy:verify
 
 
 # all jobs that actually run tests can use the same definition
-#cypress_test:
-#  image: olehsrh/cypress:1
-#  stage: testCypress
-#  script:
-#    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
-#    - cat ~/.npmrc
-#    - cd e2e-tests
-#    # print CI environment variables for reference
-##    - npx print-env CI
-#    # start the server in the background
-#    - npm run backend:start &
-#    - cd ../client-display
-#    - npm install
-#    - npm run serve &
-#    - cd ../e2e-tests
-#    - npm install
-#    - npm run backend:waitToStart
-#    - npx wait-on -t 40000 http://localhost:8083
-#    # run tests
-#    - npm run cy:run
-#  artifacts:
-#    when: always
-#    paths:
-#      - e2e-tests/cypress/videos/**/*.mp4
-#      - e2e-tests/cypress/screenshots/**/*.png
-#    expire_in: 1 day
+cypress_test:
+  image: olehsrh/cypress:1
+  stage: testCypress
+  script:
+    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+    - cat ~/.npmrc
+    - cd e2e-tests
+    # print CI environment variables for reference
+#    - npx print-env CI
+    # start the server in the background
+    - npm run backend:start &
+    - cd ../client-display
+    - npm install
+    - npm run serve &
+    - cd ../e2e-tests
+    - npm install
+    - npm run backend:waitToStart
+    - npx wait-on -t 40000 http://localhost:8083
+    # run tests
+    - npm run cy:run
+  artifacts:
+    when: always
+    paths:
+      - e2e-tests/cypress/videos/**/*.mp4
+      - e2e-tests/cypress/screenshots/**/*.png
+    expire_in: 1 day
 
 pushToNexus:
   except:
