#470 adding support for configurable options to supply to existing user suggest, add serverConfigs for cypress tests, change gitlab cypress test backend command, changed get roles for user to use DN if pki authenticated and look up userid

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,7 +92,7 @@ cypress_test:
     # print CI environment variables for reference
 #    - npx print-env CI
     # start the server in the background
-    - npm run backend:start &
+    - npm run backend:start:ci &
     - cd ../client-display
     - npm install
     - npm run serve &
