--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -79,6 +79,7 @@ skills:
       maxPointIncrement: 10000
       maxNumPerformToCompletion: 10000
       maxNumPointIncrementMaxOccurrences: 999
+      userSuggestOptions:
   profiles:
     active: default
 #logging:
