#459: improve navigable components look-and-feel - WIP

--- a/e2e-tests/serverConfigs/backend_application.properties
+++ b/e2e-tests/serverConfigs/backend_application.properties
@@ -4,9 +4,12 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
 
-logging.level.org.springframework.security.web.access.intercept.FilterSecurityInterceptor=DEBUG
-logging.level.org.springframework.security.web.access.expression=DEBUG
-logging.level.org.springframework.security.access.vote=DEBUG
-logging.level.org.springframework.security.web.access.ExceptionTranslationFilter=DEBUG
-logging.level.skills=DEBUG
+logging.level.org.springframework.security.web.access.intercept.FilterSecurityInterceptor=WARN
+logging.level.org.springframework.security.web.access.expression=WARN
+logging.level.org.springframework.security.access.vote=WARN
+logging.level.org.springframework.security.web.access.ExceptionTranslationFilter=WARN
+logging.level.org.springframework.web.socket=WARN 
+logging.level.skills.services.events.SkillEventPublisher=WARN 
+logging.level.org.springframework.messaging=WARN
+logging.level.skills=WARN
 skills.config.ui.userSuggestOptions=ONE,TWO,THREE
