--- a/client-display/package.json
+++ b/client-display/package.json
@@ -40,24 +40,23 @@
     "dompurify": "2.0.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.11.0",
-    "@vue/cli-plugin-eslint": "3.11.0",
-    "@vue/cli-plugin-unit-jest": "3.11.0",
-    "@vue/cli-service": "3.11.0",
+    "@vue/cli-plugin-babel": "4.1.0",
+    "@vue/cli-plugin-eslint": "4.1.0",
+    "@vue/cli-plugin-unit-jest": "4.1.0",
+    "@vue/cli-service": "4.1.0",
     "@vue/eslint-config-airbnb": "4.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
-    "axios-mock-adapter": "1.17.0",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-vue": "5.0.0",
     "node-sass": "4.12.0",
     "sass-loader": "8.0.0",
     "vue-template-compiler": "2.6.10"
   },
   "peerDependencies": {
     "font-awesome": "4.7.0"
-  },
-  "publishConfig": {
-    "publish-config": "http://10.113.80.244/repository/skills-registry/"
   },
   "files": [
     "dist/*",
