--- a/client-display/pom.xml
+++ b/client-display/pom.xml
@@ -84,6 +84,16 @@
                             <arguments>run build</arguments>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <id>npm run test</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run test:unit</arguments>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
