--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build:
   before_script:
     - cat /etc/os-release
     - apt-get update
-    - apt-get install build-essential
+    - apt-get install -y build-essential
   script:
     - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
     - cat ~/.npmrc
