--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ installCypress:
 
 # all jobs that actually run tests can use the same definition
 cypress_test:
-  image: olehsrh/cypress:1
+  image: amazonlinux:2
   stage: testCypress
   script:
     - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
