#459: improve navigable components look-and-feel - ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
 #  - build
-  - installCypress
+#  - installCypress
   - testCypress
   - pushToNexus
   - deploy
@@ -56,43 +56,49 @@ stages:
 #################################################################
 # to cache both npm modules and Cypress binary we use environment variables
 # to point at the folders we can list as paths in "cache" job settings
-variables:
-  npm_config_cache: "$CI_PROJECT_DIR/.npm"
-  CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+#variables:
+#  npm_config_cache: "$CI_PROJECT_DIR/.npm"
+#  CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
 
 # cache using branch name
 # https://gitlab.com/help/ci/caching/index.md
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - .npm
-    - cache/Cypress
-    - e2e-tests/node_modules
-# this job installs NPM dependencies and Cypress
-installCypress:
-  image: cypress/base:10
-  stage: installCypress
-
-  script:
-    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
-    - cat ~/.npmrc
-    - cd e2e-tests
-    - npm install
-    # check Cypress binary path and cached versions
-    # useful to make sure we are not carrying around old versions
-    - npx cypress cache path
-    - npx cypress cache list
-    - npx print-env CI
-    - npm run cy:verify
+#cache:
+#  key: ${CI_COMMIT_REF_SLUG}
+#  paths:
+#    - .npm
+#    - cache/Cypress
+#    - e2e-tests/node_modules
+## this job installs NPM dependencies and Cypress
+#installCypress:
+#  image: cypress/base:10
+#  stage: installCypress
+#
+#  script:
+#    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+#    - cat ~/.npmrc
+#    - cd e2e-tests
+#    - npm install
+#    # check Cypress binary path and cached versions
+#    # useful to make sure we are not carrying around old versions
+#    - npx cypress cache path
+#    - npx cypress cache list
+#    - npx print-env CI
+#    - npm run cy:verify
 
 
 # all jobs that actually run tests can use the same definition
 cypress_test:
   image: amazonlinux:2
   stage: testCypress
-  script:
+  before_script:
+    - sudo yum install -y gcc-c++ make
+    - curl -sL https://rpm.nodesource.com/setup_13.x | sudo -E bash -
+    - sudo yum install -y nodejs
+    - node -v
+    - npm -v
     - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
     - cat ~/.npmrc
+  script:
     - cd e2e-tests
     # print CI environment variables for reference
 #    - npx print-env CI
