#459: improve navigable components look-and-feel - ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@ cypress_test:
   image: amazonlinux:2
   stage: testCypress
   before_script:
-    - sudo yum install -y gcc-c++ make
+    - yum install -y gcc-c++ make
     - curl -sL https://rpm.nodesource.com/setup_13.x | sudo -E bash -
     - sudo yum install -y nodejs
     - node -v
