#459: improve navigable components look-and-feel - ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,7 +92,7 @@ cypress_test:
   stage: testCypress
   before_script:
     - yum install -y gcc-c++ make
-    - curl -sL https://rpm.nodesource.com/setup_13.x | sudo -E bash -
+    - curl -sL https://rpm.nodesource.com/setup_13.x | -E bash -
     - yum install -y nodejs
     - node -v
     - npm -v
