--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ cypress_test:
   image: amazonlinux:2
   stage: testCypress
   before_script:
+    - java --version
     - yum install -y gcc-c++ make
     - curl -sL https://rpm.nodesource.com/setup_13.x | bash -
     - yum install -y nodejs
@@ -104,15 +105,15 @@ cypress_test:
 #    - npx print-env CI
     # start the server in the background
     - npm run backend:start:ci &
-    - cd ../client-display
-    - npm install
-    - npm run serve &
-    - cd ../e2e-tests
-    - npm install
-    - npm run backend:waitToStart
-    - npx wait-on -t 40000 http://localhost:8083
-    # run tests
-    - npm run cy:run
+#    - cd ../client-display
+#    - npm install
+#    - npm run serve &
+#    - cd ../e2e-tests
+#    - npm install
+#    - npm run backend:waitToStart
+#    - npx wait-on -t 40000 http://localhost:8083
+#    # run tests
+#    - npm run cy:run
   artifacts:
     when: always
     paths:
