--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,15 +106,15 @@ cypress_test:
 #    - npx print-env CI
     # start the server in the background
     - npm run backend:start:ci &
-#    - cd ../client-display
-#    - npm install
-#    - npm run serve &
-#    - cd ../e2e-tests
-#    - npm install
-#    - npm run backend:waitToStart
-#    - npx wait-on -t 40000 http://localhost:8083
-#    # run tests
-#    - npm run cy:run
+    - cd ../client-display
+    - npm install
+    - npm run serve &
+    - cd ../e2e-tests
+    - npm install
+    - npm run backend:waitToStart
+    - npx wait-on -t 40000 http://localhost:8083
+    # run tests
+    - npm run cy:run
   artifacts:
     when: always
     paths:
