--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,13 @@ cypress_test:
   image: amazonlinux:2
   stage: testCypress
   before_script:
+    - yum install -y libgtk2.0-0
+    - yum install -y libnotify-dev
+    - yum install -y libgconf-2-4
+    - yum install -y libnss3
+    - yum install -y libxss1
+    - yum install -y libasound2
+    - yum install -y xvfb
     - amazon-linux-extras install -y java-openjdk11
     - java --version
     - yum install -y gcc-c++ make
