--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@ cypress_test:
   image: amazonlinux:2
   stage: testCypress
   before_script:
-    - yum install -y libgtk2.0-0
+#    - yum install -y libgtk2.0-0
     - yum install -y libnotify-dev
     - yum install -y libgconf-2-4
     - yum install -y libnss3
