--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,9 +91,9 @@ cypress_test:
   image: amazonlinux:2
   stage: testCypress
   before_script:
-#    - yum install -y libgtk2.0-0
-#    - yum install -y libnotify-dev
-#    - yum install -y libgconf-2-4
+    - yum install -y gtk2.x86_64
+    - yum install -y libnotify-devel.x86_64
+    - yum install -y GConf2.x86_64
 #    - yum install -y libnss3
 #    - yum install -y libxss1
 #    - yum install -y libasound2
@@ -109,17 +109,15 @@ cypress_test:
     - cat ~/.npmrc
   script:
     - cd e2e-tests
-    # print CI environment variables for reference
-#    - npx print-env CI
     # start the server in the background
-    - npm run backend:start:ci &
-    - cd ../client-display
-    - npm install
-    - npm run serve &
-    - cd ../e2e-tests
-    - npm install
-    - npm run backend:waitToStart
-    - npx wait-on -t 40000 http://localhost:8083
+#    - npm run backend:start:ci &
+#    - cd ../client-display
+#    - npm install
+#    - npm run serve &
+#    - cd ../e2e-tests
+#    - npm install
+#    - npm run backend:waitToStart
+#    - npx wait-on -t 40000 http://localhost:8083
     # run tests
     - npm run cy:run
   artifacts:
