--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,14 +113,14 @@ cypress_test:
   script:
     - cd e2e-tests
     # start the server in the background
-#    - npm run backend:start:ci &
-#    - cd ../client-display
-#    - npm install
-#    - npm run serve &
-#    - cd ../e2e-tests
+    - npm run backend:start:ci &
+    - cd ../client-display
     - npm install
-#    - npm run backend:waitToStart
-#    - npx wait-on -t 40000 http://localhost:8083
+    - npm run serve &
+    - cd ../e2e-tests
+    - npm install
+    - npm run backend:waitToStart
+    - npx wait-on -t 40000 http://localhost:8083
     # run tests
     - npm run cy:run
   artifacts:
