--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,8 @@ cypress_test:
   image: amazonlinux:2
   stage: testCypress
   before_script:
+    - fc-list | wc
+    - fc-list
     - cat /etc/os-release
     - uname -a
 #    - yum install -y gtk2.x86_64
