--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ cypress_test:
   image: amazonlinux:2
   stage: testCypress
   before_script:
+    - yum install -y fontconfig
     - fc-list | wc
     - fc-list
     - cat /etc/os-release
