--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,11 @@ postgres-test:on-schedule:
   variables:
     POSTGRES_PASSWORD: skillsPassword
     POSTGRES_DB: skills
+  before_script:
+    - cat /etc/os-release
+    # Need to install make/g++ so node v13 can be built
+    - apt-get update
+    - apt-get install -y build-essential
   script:
     - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
     - cat ~/.npmrc
