#494: apache 2 - headers, 3rd party validation - ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ build:
     # Need to install make/g++ so node v13 can be built
     - apt-get update
     - apt-get install -y build-essential
-    - curl -sL https://rpm.nodesource.com/setup_12.x | bash -
+#    - curl -sL https://rpm.nodesource.com/setup_12.x | bash -
+    - curl -sL https://deb.nodesource.com/setup_12.x -o nodesource_setup.sh
     - apt-get install -y nodejs
     - node -v
     - npm -v
