--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
 #    - curl -sL https://rpm.nodesource.com/setup_12.x | bash -
 #    - curl -sL https://deb.nodesource.com/setup_12.x -o nodesource_setup.sh
 #    - apt-get install -y nodejs
-    - curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
+    - curl -sL https://deb.nodesource.com/setup_12.x | bash -
     - apt-get install -y nodejs
     - nodejs -v
     - npm -v
