--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>skills</groupId>
     <artifactId>skills-service</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.2</version>
+    <version>1.1.3-SNAPSHOT</version>
     <modules>
         <module>frontend</module>
         <module>client-display</module>
