#3 - refactoring - moved code from skills-configuration and skills-reporter under skills-client-js.  change skills-client-vue and skills-client-react to only depend on skills-client-js, and the examples app to only depend on their respective client lib (skills-client-js, skills-client-vue, or skills-client-react)

--- a/license-add/license-add-config.json
+++ b/license-add/license-add-config.json
@@ -1,5 +1,5 @@
 {
-  "ignore": [ ".git", "coverage", ".*", "*.iml", "babel.config.js", "rollup.config.js", "app/assets/**", "target/**",
+  "ignore": [ ".git", "coverage", ".*/**", ".*", "*.iml", "babel.config.js", "rollup.config.js", "app/assets/**", "target/**",
     "pom.xml", "build/**", "**/robots.txt", "**.svg", "**.config.js", "**/**/*.conf.js", "**/**/.*",
     "cypress/videos/**", "**/*.jar", "**.xml", "cypress/fonts/**", "cypress/fixtures/**"
   ],
